// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Entry wrapper with factories > re-exports the factories next to the generated reactor > factories-entry 1`] = `
"/**
 * Canister entrypoint.
 *
 * Created once by @ic-reactor/codegen and safe to customize.
 * Keep the re-exports below if you want generated exports and types to stay in sync.
 *
 * Recommended customization points:
 * - define app-specific query/mutation factories next to the generated ones
 * - add app-specific hooks and cache invalidation wiring
 * - compose generated APIs into route loaders/actions
 *
 * Do not edit \`index.generated.ts\` or \`index.factories.generated.ts\`; they
 * are regenerated on each codegen run.
 * AI guide: https://ic-reactor.b3pay.net/llms-full.txt
 * Skill install: npx skills add B3Pay/ic-reactor-skills --full-depth --skill ic-reactor-hooks
 */
export * from "./index.generated"
export * from "./index.factories.generated"
"
`;

exports[`Factories generator > binds a factory per method to the DisplayReactor by default > display-reactor-factories 1`] = `
"import { createMutation, createQuery, createQueryFactory } from "@ic-reactor/react"
import { backendReactor } from "./index.generated"

/**
 * Backend Query and Mutation Factories
 *
 * Auto-generated by @ic-reactor/codegen — do not edit.
 * This file is overwritten whenever generation runs.
 *
 * One export per method of the service, bound to \`backendReactor\`:
 * \`createQuery\` for a query method that takes no arguments,
 * \`createQueryFactory\` for a query method that takes arguments, and
 * \`createMutation\` for an update or oneway method. Pass per-call options to
 * \`useQuery()\` and \`useMutation()\`, and define a factory with its own
 * config in the stable \`index.ts\` wrapper (or an adjacent module).
 */

/** "get_message": query, no arguments. */
export const getMessageQuery = /* @__PURE__ */ createQuery(backendReactor, {
  functionName: "get_message",
})

/** "get_user": query. \`getUserQuery(args)\` is the query for those arguments. */
export const getUserQuery = /* @__PURE__ */ createQueryFactory(backendReactor, {
  functionName: "get_user",
})

/** "list_posts": composite query. \`listPostsQuery(args)\` is the query for those arguments. */
export const listPostsQuery = /* @__PURE__ */ createQueryFactory(backendReactor, {
  functionName: "list_posts",
})

/** "notify": oneway update. */
export const notifyMutation = /* @__PURE__ */ createMutation(backendReactor, {
  functionName: "notify",
})

/** "set_message": update. */
export const setMessageMutation = /* @__PURE__ */ createMutation(backendReactor, {
  functionName: "set_message",
})
"
`;

exports[`Factories generator > export names > imports a factory under an alias when a method's export takes its name > naming-factories 1`] = `
"import { createMutation as _createMutation, createQuery as _createQuery, createQueryFactory } from "@ic-reactor/react"
import { backendReactor } from "./index.generated"

/**
 * Backend Query and Mutation Factories
 *
 * Auto-generated by @ic-reactor/codegen — do not edit.
 * This file is overwritten whenever generation runs.
 *
 * One export per method of the service, bound to \`backendReactor\`:
 * \`createQuery\` for a query method that takes no arguments,
 * \`createQueryFactory\` for a query method that takes arguments, and
 * \`createMutation\` for an update or oneway method. Pass per-call options to
 * \`useQuery()\` and \`useMutation()\`, and define a factory with its own
 * config in the stable \`index.ts\` wrapper (or an adjacent module).
 */

/** "": query, no arguments. */
export const Query = /* @__PURE__ */ _createQuery(backendReactor, {
  functionName: "",
})

/** "2fa_status": query, no arguments. */
export const _2faStatusQuery = /* @__PURE__ */ _createQuery(backendReactor, {
  functionName: "2fa_status",
})

/** "Create": query, no arguments. */
export const createQuery = /* @__PURE__ */ _createQuery(backendReactor, {
  functionName: "Create",
})

/** "__proto__": query, no arguments. */
export const protoQuery = /* @__PURE__ */ _createQuery(backendReactor, {
  functionName: "__proto__",
})

/** "class": update. */
export const classMutation = /* @__PURE__ */ _createMutation(backendReactor, {
  functionName: "class",
})

/** "create": update. */
export const createMutation = /* @__PURE__ */ _createMutation(backendReactor, {
  functionName: "create",
})

/** "get-thing": query, no arguments. */
export const getThingQuery = /* @__PURE__ */ _createQuery(backendReactor, {
  functionName: "get-thing",
})

/** "getThing": query, no arguments. */
export const getThingQuery_ = /* @__PURE__ */ _createQuery(backendReactor, {
  functionName: "getThing",
})

/** "get_thing": query, no arguments. */
export const getThingQuery__ = /* @__PURE__ */ _createQuery(backendReactor, {
  functionName: "get_thing",
})

/** "icrc1_balance_of": query. \`icrc1BalanceOfQuery(args)\` is the query for those arguments. */
export const icrc1BalanceOfQuery = /* @__PURE__ */ createQueryFactory(backendReactor, {
  functionName: "icrc1_balance_of",
})

/** "if": query, no arguments. */
export const ifQuery = /* @__PURE__ */ _createQuery(backendReactor, {
  functionName: "if",
})

/** "use_backend": query, no arguments. */
export const useBackendQuery_ = /* @__PURE__ */ _createQuery(backendReactor, {
  functionName: "use_backend",
})

/** "use_backend_method": update. */
export const useBackendMethodMutation = /* @__PURE__ */ _createMutation(backendReactor, {
  functionName: "use_backend_method",
})

/** "日本": query, no arguments. */
export const 日本Query = /* @__PURE__ */ _createQuery(backendReactor, {
  functionName: "日本",
})
"
`;

exports[`Factories generator > snapshots a CandidReactor factories file > candid-reactor-factories 1`] = `
"import { createMutation, createQueryFactory } from "@ic-reactor/react"
import { ledgerReactor, type LedgerService } from "./index.generated"

/**
 * Ledger Query and Mutation Factories
 *
 * Auto-generated by @ic-reactor/codegen — do not edit.
 * This file is overwritten whenever generation runs.
 *
 * One export per method of the service, bound to \`ledgerReactor\`:
 * \`createQuery\` for a query method that takes no arguments,
 * \`createQueryFactory\` for a query method that takes arguments, and
 * \`createMutation\` for an update or oneway method. Pass per-call options to
 * \`useQuery()\` and \`useMutation()\`, and define a factory with its own
 * config in the stable \`index.ts\` wrapper (or an adjacent module).
 */

/** "icrc1_balance_of": query. \`icrc1BalanceOfQuery(args)\` is the query for those arguments. */
export const icrc1BalanceOfQuery = /* @__PURE__ */ createQueryFactory<LedgerService, "candid", "icrc1_balance_of">(ledgerReactor, {
  functionName: "icrc1_balance_of",
})

/** "icrc1_transfer": update. */
export const icrc1TransferMutation = /* @__PURE__ */ createMutation<LedgerService, "candid", "icrc1_transfer">(ledgerReactor, {
  functionName: "icrc1_transfer",
})
"
`;

exports[`Factories generator > supports Reactor mode generation > reactor-factories 1`] = `
"import { createMutation, createQuery, createQueryFactory } from "@ic-reactor/react"
import { workflowEngineReactor } from "./index.generated"

/**
 * WorkflowEngine Query and Mutation Factories
 *
 * Auto-generated by @ic-reactor/codegen — do not edit.
 * This file is overwritten whenever generation runs.
 *
 * One export per method of the service, bound to \`workflowEngineReactor\`:
 * \`createQuery\` for a query method that takes no arguments,
 * \`createQueryFactory\` for a query method that takes arguments, and
 * \`createMutation\` for an update or oneway method. Pass per-call options to
 * \`useQuery()\` and \`useMutation()\`, and define a factory with its own
 * config in the stable \`index.ts\` wrapper (or an adjacent module).
 */

/** "get_message": query, no arguments. */
export const getMessageQuery = /* @__PURE__ */ createQuery(workflowEngineReactor, {
  functionName: "get_message",
})

/** "get_user": query. \`getUserQuery(args)\` is the query for those arguments. */
export const getUserQuery = /* @__PURE__ */ createQueryFactory(workflowEngineReactor, {
  functionName: "get_user",
})

/** "list_posts": composite query. \`listPostsQuery(args)\` is the query for those arguments. */
export const listPostsQuery = /* @__PURE__ */ createQueryFactory(workflowEngineReactor, {
  functionName: "list_posts",
})

/** "notify": oneway update. */
export const notifyMutation = /* @__PURE__ */ createMutation(workflowEngineReactor, {
  functionName: "notify",
})

/** "set_message": update. */
export const setMessageMutation = /* @__PURE__ */ createMutation(workflowEngineReactor, {
  functionName: "set_message",
})
"
`;

exports[`Factories generator > writes an empty module for a service without methods > no-methods-factories 1`] = `
"/**
 * Backend Query and Mutation Factories
 *
 * Auto-generated by @ic-reactor/codegen — do not edit.
 * This file is overwritten whenever generation runs.
 *
 * One export per method of the service, bound to \`backendReactor\`:
 * \`createQuery\` for a query method that takes no arguments,
 * \`createQueryFactory\` for a query method that takes arguments, and
 * \`createMutation\` for an update or oneway method. Pass per-call options to
 * \`useQuery()\` and \`useMutation()\`, and define a factory with its own
 * config in the stable \`index.ts\` wrapper (or an adjacent module).
 */
export {}
"
`;
